[package]
name = "bolt_hash_rust"
version = "0.1.0"
edition = "2021"

[lib]
name = "bolt_hash_rust"
crate-type = ["cdylib", "rlib"]
path = "src/lib.rs"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
blake2 = "0.10.0"
rand = "0.8.5"

