[package]
name = "node-addon"
version = "0.1.0"
authors = ["taky <taky@taky.com>"]
license = "MIT"
build = "build.rs"
edition = "2018"
exclude = ["artifacts.json", "index.node"]

[lib]
name = "node_addon"
crate-type = ["cdylib"]

[build-dependencies]
neon-build = "0.10.1"

[dependencies]
neon = "0.10.1"
bolt_hash = { path = "../../rust" }
